<resources>
    <string name="app_name">GoOutApp</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="text_sign_hint">Not registered yet? </string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="Nickname">Nickname</string>
    <string name="email_empty_error">The email cannot be empty</string>
    <string name="error_invalid_email">The email is not valid</string>
    <string name="password_empty_error">The password cannot be empty</string>
    <string name="error_invalid_password">The password is not valid</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="menu_create_group">Create new group</string>
    <string name="menu_new_proposal">New proposal</string>
    <string name="menu_join_group">Join a group</string>
    <string name="menu_home">Groups</string>
    <string name="menu_manage_groups">Groups management</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="enter_group_code">Enter the group code</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="join_group">Join a group</string>
    <string name="successful_registration">Successful registration!</string>
    <string name="login_fail">Wrong credentials!</string>
    <string name="mark_your_date">Mark your date:</string>
    <string name="confirm">Confirm</string>
    <string name="create_group">Create a new group</string>
    <string name="groupName">Group name</string>
    <string name="enter_group_name">Enter the group name</string>
    <string name="user_is_already_member">You are already a member of this group</string>
    <string name="user_successful_added_to_group">You have been successfully added to the group</string>
    <string name="error_empty_value">The filed value cannot be empty or start with a space</string>
    <string name="group_not_exists">The searched group doesn\'t exists</string>
    <string name="group_creation_failed">Group creation failed</string>
    <string name="group_creation_successful">Group created succesfully</string>
    <string name="delete_group">Delete the group</string>
    <string name="delete_group_message">Are you sure you want to delete the group?</string>
    <string name="invalid_group_code">The group code entered is invalid</string>
    <string name="leave_group">Leave the group</string>
    <string name="leave_group_message">Are you sure you want to leave the group?</string>
    <string name="error">Error</string>
    <string name="apiKey" translatable="false">AIzaSyBNPwGd6VZHLf7TToPGuI0ZmecATXvuWGY</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="proposal_place">Click to choose the place</string>
    <string name="proposal_date">Click to choose the date</string>
    <string name="proposal_hour">Click to choose the time</string>
    <string name="places_api_key" translatable="false">AIzaSyBNPwGd6VZHLf7TToPGuI0ZmecATXvuWGY</string>
    <string name="successfulProposalCreation">The proposal was successfully created</string>
    <string name="failProposalCreation">An error occurred while creating the proposal</string>
    <string name="place">Place</string>
    <string name="organizator">Organizator</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="max15chars">Enter up to 15 characters</string>
    <string name="name_empty_error">The name cannot be empty</string>
    <string name="surname_empty_error">The surname cannot be empty</string>
    <string name="nickname_empty_error">The nickname cannot be empty</string>
    <string name="place_empty_error">The place cannot be empty</string>
    <string name="date_empty_error">The date cannon be empty</string>
    <string name="time_empty_error">The timetable cannot be null</string>
    <string name="menu_history">History</string>
    <string name="proposal_state_successful">The proposal state was successfully setted</string>
    <string name="proposal_state_fail">An error occurred while updating the proposal state</string>
    <string name="proposal_accepted">Accepted</string>
    <string name="proposal_refused">Refused</string>
    <string name="compile_date_first">The date field must be filled in first</string>
    <string name="time_not_valid">It is not possible to select a time in the past</string>
    <string name="expired_proposal">Expired</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="enter_chat">Enter the chat</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="edittext_message_hint">Write a message</string>
    <string name="max20characters">Enter up to 20 characters</string>
    <string name="message_empty_error">The message text cannot be empty</string>
    <string name="state">State</string>
    <string name="duplicate_mail">The email address entered has already been registered</string>
    <string name="duplicate_nickname">The nickname entered has already benn registered</string>
    <string name="proposal_accept_title_popup">Accept Proposal</string>
    <string name="proposal_decline_title_popup">Decline Proposal</string>
    <string name="proposal_accept_message_popup">Are you sure you want to accept?</string>
    <string name="proposal_decline_message_popup">Are you sure you want to delcine?</string>
    <string name="group_invitation_code">Invitation code</string>
    <string name="copy">Copy</string>
    <string name="text_copied_to_clipboard">Text copied into clipboard</string>
    <string name="successfulProposalModified">The proposal was successfully modified</string>
    <string name="failProposalModify">An error occured during the modify</string>
    <string name="cancel_event">Clear the event</string>
    <string name="cancel_event_message">Are you sure you want to cancel the event?</string>
    <string name="canceled">Canceled</string>
    <string name="language">Language</string>
    <string name="italian">Italian</string>
    <string name="english">English</string>
    <string name="options">Options</string>
    <string name="nomeGruppo">Group Name</string>
    <string name="change_password">Change Password</string>
    <string name="remove">Remove</string>
    <string name="failRemoveMember">An error occurred while removing the user</string>
    <string name="successfulRemoveMember">The user was successfully removed</string>
    <string name="you">You</string>
    <string name="members">Members</string>
    <string name="partecipants">Partecipants</string>
    <string name="no_partecipant">Still no participants</string>
    <string name="modify_proposal">Modify proposal</string>
    <string name="empty_chat_message">No messages to display</string>
    <string name="empty_home_message">There are no groups to display</string>
    <string name="empty_history_message">The history is empty</string>
    <string name="empty_proposal_message">There are no proposals to display</string>
    <string name="remove_member_message">Are you sure you want to remove this user?</string>
    <string name="remove_member">Remove the member</string>
    <string name="archives">Archives</string>
    <string name="proposal_archived">The proposal was successfully archived</string>
    <string name="proposal_archived_fail">An error occurred during the operation</string>
    <string name="archive_fail">The proposal must be declined first</string>
    <string name="chat_accepted_message">accepted ✅</string>
    <string name="chat_refused_message">refused ❌</string>
    <string name="account" translatable="false">Account</string>
    <string name="message_join">has entered the group</string>
    <string name="message_removed">has been removed  from the group</string>
    <string name="message_leave">has leaved  the group</string>
    <string name="notifications">Notifications</string>
    <string name="empty_notifications">There are no notifications</string>
    <string name="canceled_proposal">Canceled</string>
    <string name="modifed_proposal">Modified</string>
    <string name="address">Address</string>
    <string name="password_help">The password must contain an uppercase, a number, a special character</string>
</resources>