<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/account">

        <ListPreference
            app:key="appLanguage"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_language"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/profile">

        <EditTextPreference
            app:key="name"
            app:title="@string/name"
            app:selectable="false"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_menu_user_profile" />

        <EditTextPreference
            app:key="surname"
            app:title="@string/surname"
            app:selectable="false"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_menu_user_profile" />

        <EditTextPreference
            app:key="nickname"
            app:title="@string/Nickname"
            android:selectable="false"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_account_circle" />

        <EditTextPreference
            app:key="email"
            app:title="@string/email_address"
            android:selectable="false"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_edittext_email" />

    </PreferenceCategory>

</PreferenceScreen>