<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="it.gooutapp.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_show_groups" >
        <action
            android:id="@+id/action_nav_showGroup_to_nav_group"
            app:destination="@id/nav_group"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_newProposal"
        android:name="it.gooutapp.fragments.newProposal.NewProposal"
        android:label="@string/menu_new_proposal"
        tools:layout="@layout/fragment_new_proposal" />

    <fragment
        android:id="@+id/nav_userProfile"
        android:name="it.gooutapp.fragments.userProfile.UserProfile"
        android:label="@string/profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="it.gooutapp.fragments.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_group"
        android:name="it.gooutapp.fragments.groupWindow.GroupFragment"
        tools:layout="@layout/fragment_group" />

</navigation>