<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingBottom="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/gooutappicon_foreground" />

        <EditText
            android:id="@+id/editTextLEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_custom_background"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextLPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_custom_background"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextureView
            android:id="@+id/textureView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.12" />

        <Button
            android:id="@+id/buttonAutocompletamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="52dp"
            android:minWidth="100dp"
            android:layout_gravity="center"
            android:onClick="credentialsCheck"
            android:text="@string/login" />

        <TextureView
            android:id="@+id/textureView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.12" />

        <LinearLayout
            android:layout_width="367dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/drawerTextViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.38"
                android:gravity="right"
                android:text="@string/text_sign_hint"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.7"
                android:gravity="left"
                android:onClick="openRegistration"
                android:text="@string/sign_up"
                android:textColor="@color/viewBlue"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>