<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/lilita_one"
        android:text="@string/sign_up"
        android:textColor="@color/defaultBlue"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNameProposalView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewRegDoodle"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewRegDoodle"
        android:layout_width="70dp"
        android:layout_height="95dp"
        android:scaleType="centerCrop"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNameProposalView"
        app:layout_constraintEnd_toStartOf="@+id/textViewTitle"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/registration_doodle_foreground" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextNameProposalView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/editTextPlaceView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewRegDoodle"
        app:startIconContentDescription="Prova"
        app:startIconDrawable="@drawable/ic_menu_user_profile">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNameP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPlaceView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/editTextDateView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameProposalView"
        app:startIconContentDescription="Prova"
        app:startIconDrawable="@drawable/ic_menu_user_profile">>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPlacePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextDateView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/Nickname"
        android:inputType="textPersonName"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/editTextHourView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPlaceView"
        app:startIconContentDescription="Prova"
        app:startIconDrawable="@drawable/ic_menu_user_profile">>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextHourView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateView"
        app:startIconContentDescription="Prova"
        app:startIconDrawable="@drawable/ic_edittext_email">>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextHourPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPasswordView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/RSignin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHourView"
        app:startIconContentDescription="Prova"
        app:startIconDrawable="@drawable/ic_edittext_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/RSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="52dp"
        android:minWidth="100dp"
        android:onClick="fieldsCheck"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordView" />

</androidx.constraintlayout.widget.ConstraintLayout>